# python-project

./: .env.example  .gitignore  .pre-commit-config.yaml  Containerfile  Makefile  README.md  pyproject.toml  run.py  setup.cfg
docs/: containerization.md  faq.md  flake8.md  notes.md  poetry.md  pytest.md
tests/: test.json  test_run.py
