[tool.poetry]
name = "python-project"
version = "0.1.0"
description = "Example of python project"
authors = ["Aleksandr Zhuravlev <1fxmnyu72@mozmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
python-json-logger = "^2.0.7"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
flake8-bugbear = "^23.9.16"
flake8-builtins = "^2.1.0"
flake8-commas = "^2.1.0"
flake8-variables-names = "^0.0.6"
flake8-import-order = "^0.18.2"
pep8-naming = "^0.13.3"
pytest = "^7.4.2"
mypy = "^1.5.1"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
